--- a/css/custom.css
+++ b/css/custom.css
@@ -22,3 +22,15 @@ body, html {
 	border-bottom: 4px solid var(--secondary);
 	color: var(--secondary);
 }
+#slider {
+	background: url("/imagens/slider-bg.svg") no-repeat center bottom;
+	background-size: contain;
+}
+#slider h1{
+	text-transform: uppercase;
+	font-weight: 900;
+}
+#slider h4 {
+	font-size: 18px;
+	text-transform: uppercase;
+}
