Sessão serviços finalizada

--- a/css/custom.css
+++ b/css/custom.css
@@ -34,3 +34,32 @@ body, html {
 	font-size: 18px;
 	text-transform: uppercase;
 }
+#servicos a.destaque{
+	display: block;
+	background: var(--light);
+	border-radius: 5px;
+	text-align: center;
+	padding: 20px;
+	color: #000;
+	text-decoration: none;
+	transition: all ease-out .2s;
+
+}
+#servicos a.destaque:hover {
+	background: #fff;
+	box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.12);
+	transform: scale(1.05);
+}
+#servicos p {
+	color: var(--dark);
+}
+#servicos a.destaque .img-container {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 200px;
+
+}
+#servicos a.destaque .img-container img {
+	max-height: 160px;
+}
