--- a/css/global.css
+++ b/css/global.css
@@ -1,6 +1,12 @@
 h1, h2, h3, h4 {
 	font-weight: 700;
 }
+a {
+	color: var(--primary);
+}
+a:hover {
+	color: var(--secondary);
+}
 .title {
 	text-transform: uppercase;
 
