--- a/css/responsive.css
+++ b/css/responsive.css
@@ -9,3 +9,11 @@
 		width: 100%;
 	}
 }
+@media (max-width: 767.98px) {
+	#servicos a.destaque .img-container {
+		height: 120px;
+	}
+	#servicos a.destaque .img-container img{
+		max-height: 120px;
+	}
+}
